# recover-youtube-videos

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  go.mod  go.sum  main.go
backend/: .env.development  .env.sample  .gitignore  Dockerfile  Makefile  build.sh  go.mod  go.sum  main.go  serverless.yml
backend/cmd/fetch_removed_videos/: main.go
backend/cmd/hard_migrate/: main.go
backend/cmd/recover_videos/: main.go
backend/cmd/soft_migrate/: main.go
backend/src/api/: youtube.go
backend/src/api/youtube/: models.go  youtube.go
backend/src/database/: database.go  models.go
backend/src/models/: models.go
backend/src/server/: middleware.go  routes.go  server.go
backend/src/utils/: utils.go
frontend/: .env.local.sample  .gitignore  package.json  tsconfig.json
frontend/public/: CNAME  index.html
frontend/src/: constants.ts  index.tsx  reducers.ts  store.ts
frontend/src/actions/: actions.ts  index.ts  thunks.ts
frontend/src/api/: backend.ts  google-sign-in.ts
frontend/src/components/: App.tsx  LoggedIn.tsx  LoggedOut.tsx  VideoList.tsx
src/: args.rs  authorization.go  main.rs  utils.rs  youtube.go  youtube.rs
systemd/: recover-youtube-videos.service  recover-youtube-videos.timer
test/: mock_api.json
