[package]
name = "recover-youtube-videos"
version = "0.1.0"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
edition = "2018"

[dependencies]
youtube3 = { package = "google-youtube3", version = "*" }
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "^1.0"
serde_derive = "*"
json = { package = "serde_json", version = "1.0.37" }
oauth2 = { package = "yup-oauth2", version = "^1.0" }
hyper-native-tls = "0.3.0"
structopt = "0.2"
