[package]
name = "recover-youtube-videos"
version = "0.1.0"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
edition = "2018"

[dependencies]
google-youtube3 = "*"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "^1.0"
serde_derive = "*"
serde_json = "1.0.37"
yup-oauth2 = "^1.0"
hyper-native-tls = "0.3.0"
structopt = "0.2"
